[gd_scene load_steps=32 format=3 uid="uid://dawcn0ks7hxuw"]

[ext_resource type="Script" path="res://World.gd" id="1_gq7kl"]
[ext_resource type="PackedScene" uid="uid://g0ad734tja55" path="res://Player/player.tscn" id="1_nc3is"]
[ext_resource type="PackedScene" uid="uid://boaky0itkvhrw" path="res://World/bush.tscn" id="2_1lxpp"]
[ext_resource type="Texture2D" uid="uid://neteekuio7xm" path="res://Other Asets/title-screen-animation1.png" id="2_ia644"]
[ext_resource type="PackedScene" uid="uid://bna68cd5ddhfp" path="res://World/health_ui.tscn" id="2_q2csq"]
[ext_resource type="PackedScene" uid="uid://btrdufnv36yo" path="res://Enemies/bat.tscn" id="4_tkaki"]
[ext_resource type="PackedScene" uid="uid://ksdcynvacir3" path="res://World/grass.tscn" id="6_ayrvu"]
[ext_resource type="PackedScene" uid="uid://dyutcrdixfukr" path="res://World/tree.tscn" id="8_x3qk6"]
[ext_resource type="PackedScene" uid="uid://oy0w1x0g8qnb" path="res://World/artifact.tscn" id="10_8s6an"]
[ext_resource type="PackedScene" uid="uid://cwiryly0rattn" path="res://World/help_node.tscn" id="10_6212n"]
[ext_resource type="PackedScene" uid="uid://ve7u2xd0x784" path="res://Enemies/dash-alien.tscn" id="10_sw5wt"]
[ext_resource type="PackedScene" uid="uid://v7m2xcfs13u4" path="res://World/ship_map.tscn" id="10_uuwue"]
[ext_resource type="Script" path="res://PlayerController.gd" id="11_ae5qn"]
[ext_resource type="Texture2D" uid="uid://dnh5unqr3ld3o" path="res://Artifacts/bracelet-artefact.png" id="11_bmgje"]
[ext_resource type="Texture2D" uid="uid://t7aahp6vj36j" path="res://Artifacts/book-artefact-REAL.png" id="11_meoxd"]
[ext_resource type="Script" path="res://UI/Fader.gd" id="11_svbhb"]
[ext_resource type="PackedScene" uid="uid://cugpbasgcliap" path="res://UI/dash_coldown.tscn" id="12_wxu6c"]
[ext_resource type="AudioStream" uid="uid://d4ii20unmpcya" path="res://Music and Sounds/Music.mp3" id="13_0g61i"]
[ext_resource type="Script" path="res://UI/ArtifactController.gd" id="13_8kd3m"]
[ext_resource type="PackedScene" uid="uid://b5bebuyj5oih1" path="res://UI/text_box.tscn" id="13_c4d2n"]
[ext_resource type="Texture2D" uid="uid://cx2eoh7raoh4" path="res://Artifacts/skibur-cube-artifact.png" id="13_dtddb"]
[ext_resource type="Texture2D" uid="uid://cbo3n60ejy0dj" path="res://Artifacts/key-artifact.png" id="13_wqeef"]
[ext_resource type="AudioStream" uid="uid://biswkf0bmk5tl" path="res://Music and Sounds/TransitionPlaceholder2.mp3" id="14_gdhli"]
[ext_resource type="PackedScene" uid="uid://bp2gcle6wy66i" path="res://UI/auto_fade_node.tscn" id="16_qauxw"]
[ext_resource type="PackedScene" uid="uid://m160lv3fj4xv" path="res://artifact_ui.tscn" id="17_mksqf"]
[ext_resource type="Script" path="res://UI/HelpController.gd" id="19_y5dgo"]
[ext_resource type="FontFile" uid="uid://lsf5abucrjjv" path="res://Other Asets/Spectral-Light.ttf" id="20_24mr3"]

[sub_resource type="Animation" id="Animation_62nka"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TransitionScreen:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_m32ye"]
resource_name = "fade_to_black"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TransitionScreen:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_8tb1v"]
resource_name = "fade_to_normal"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TransitionScreen:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jes1i"]
_data = {
"RESET": SubResource("Animation_62nka"),
"fade_to_black": SubResource("Animation_m32ye"),
"fade_to_normal": SubResource("Animation_8tb1v")
}

[node name="World" type="Node2D"]
script = ExtResource("1_gq7kl")

[node name="World 1" type="Node2D" parent="."]

[node name="Background" type="Sprite2D" parent="World 1"]
light_mask = 2
texture_repeat = 2
position = Vector2(159, -177.093)
rotation = -0.000780472
scale = Vector2(2.304, 1.478)
texture = ExtResource("2_ia644")
centered = false
offset = Vector2(-200, -100)
region_enabled = true
region_rect = Rect2(2.08165e-12, 2.08165e-12, 1200, 1200)

[node name="Ship Map" parent="World 1" instance=ExtResource("10_uuwue")]
position = Vector2(3050, 528)

[node name="YSortNode" type="Node2D" parent="World 1"]
y_sort_enabled = true

[node name="Camera2D" type="Camera2D" parent="World 1/YSortNode"]
position = Vector2(2261, 367)
enabled = false
limit_left = -288
limit_top = -310
limit_right = 2464
limit_bottom = 1284
position_smoothing_enabled = true
position_smoothing_speed = 10.0

[node name="Player" parent="World 1/YSortNode" instance=ExtResource("1_nc3is")]
position = Vector2(2261, 367)
world = 1
DASH_COOLDOWN = 0.5

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="World 1/YSortNode/Player"]
remote_path = NodePath("../../Camera2D")

[node name="Bushes" type="Node2D" parent="World 1/YSortNode"]
y_sort_enabled = true

[node name="Bush" parent="World 1/YSortNode/Bushes" instance=ExtResource("2_1lxpp")]
position = Vector2(61, 95)

[node name="Bush2" parent="World 1/YSortNode/Bushes" instance=ExtResource("2_1lxpp")]
position = Vector2(186, 94)

[node name="Grass" type="Node2D" parent="World 1/YSortNode"]
y_sort_enabled = true

[node name="Grass2" parent="World 1/YSortNode/Grass" instance=ExtResource("6_ayrvu")]
position = Vector2(144, 91)

[node name="Grass6" parent="World 1/YSortNode/Grass" instance=ExtResource("6_ayrvu")]
position = Vector2(-898, 146)

[node name="Grass" parent="World 1/YSortNode/Grass" instance=ExtResource("6_ayrvu")]
position = Vector2(149, 115)

[node name="Grass3" parent="World 1/YSortNode/Grass" instance=ExtResource("6_ayrvu")]
position = Vector2(-95, 178)

[node name="Grass5" parent="World 1/YSortNode/Grass" instance=ExtResource("6_ayrvu")]

[node name="Grass4" parent="World 1/YSortNode/Grass" instance=ExtResource("6_ayrvu")]
position = Vector2(-75, 179)

[node name="Trees" type="Node2D" parent="World 1/YSortNode"]
y_sort_enabled = true
position = Vector2(27, 8)

[node name="Tree" parent="World 1/YSortNode/Trees" instance=ExtResource("8_x3qk6")]
position = Vector2(281, 43)

[node name="Bats" type="Node2D" parent="World 1/YSortNode"]
y_sort_enabled = true

[node name="Bat" parent="World 1/YSortNode/Bats" instance=ExtResource("4_tkaki")]
position = Vector2(-42, 163)

[node name="Bat2" parent="World 1/YSortNode/Bats" instance=ExtResource("4_tkaki")]
position = Vector2(338, 162)

[node name="Bat4" parent="World 1/YSortNode/Bats" instance=ExtResource("4_tkaki")]
position = Vector2(-92, 37)

[node name="Bat5" parent="World 1/YSortNode/Bats" instance=ExtResource("4_tkaki")]

[node name="Bat3" parent="World 1/YSortNode/Bats" instance=ExtResource("4_tkaki")]
position = Vector2(375, 44)

[node name="DashAliens" type="Node2D" parent="World 1/YSortNode"]
y_sort_enabled = true

[node name="InteractionObjects" type="Node2D" parent="World 1/YSortNode"]

[node name="HelpNode4" parent="World 1/YSortNode/InteractionObjects" instance=ExtResource("10_6212n")]
position = Vector2(1679, 383)

[node name="HelpNode2" parent="World 1/YSortNode/InteractionObjects" instance=ExtResource("10_6212n")]
position = Vector2(2182, 210)
helpNumber = 1

[node name="HelpNode" parent="World 1/YSortNode/InteractionObjects" instance=ExtResource("10_6212n")]
position = Vector2(2181, 302)

[node name="HelpNode3" parent="World 1/YSortNode/InteractionObjects" instance=ExtResource("10_6212n")]
position = Vector2(2036, 333)
helpNumber = 2

[node name="HelpNode5" parent="World 1/YSortNode/InteractionObjects" instance=ExtResource("10_6212n")]
position = Vector2(2161, 444)
helpNumber = 3

[node name="Artifact1" parent="World 1/YSortNode/InteractionObjects" instance=ExtResource("10_8s6an")]
position = Vector2(612, -156)
artifactNumber = 1

[node name="Sprite2D" parent="World 1/YSortNode/InteractionObjects/Artifact1" index="0"]
texture = ExtResource("11_bmgje")

[node name="Artifact0" parent="World 1/YSortNode/InteractionObjects" instance=ExtResource("10_8s6an")]
position = Vector2(1749, 341)

[node name="Sprite2D" parent="World 1/YSortNode/InteractionObjects/Artifact0" index="0"]
texture = ExtResource("11_meoxd")

[node name="World 2" type="Node2D" parent="."]
position = Vector2(-1000, 2.08165e-12)

[node name="Background" type="Sprite2D" parent="World 2"]
light_mask = 2
texture_repeat = 2
position = Vector2(-1583.99, -177.093)
rotation = -0.000780472
scale = Vector2(2.30413, 1.33083)
texture = ExtResource("2_ia644")
centered = false
offset = Vector2(-200, -100)
region_enabled = true
region_rect = Rect2(2.08165e-12, 2.08165e-12, 1200, 1200)

[node name="Ship Map" parent="World 2" instance=ExtResource("10_uuwue")]
position = Vector2(1300, 528)

[node name="YSortNode" type="Node2D" parent="World 2"]
y_sort_enabled = true

[node name="Camera2D" type="Camera2D" parent="World 2/YSortNode"]
position = Vector2(511, 367)
limit_left = -3008
limit_top = -320
limit_right = -304
limit_bottom = 1184
position_smoothing_enabled = true
position_smoothing_speed = 10.0

[node name="Player" parent="World 2/YSortNode" instance=ExtResource("1_nc3is")]
position = Vector2(511, 367)
world = 2
DASH_COOLDOWN = 0.5

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="World 2/YSortNode/Player"]
remote_path = NodePath("../../Camera2D")

[node name="Bushes" type="Node2D" parent="World 2/YSortNode"]
y_sort_enabled = true

[node name="Grass" type="Node2D" parent="World 2/YSortNode"]
y_sort_enabled = true

[node name="Trees" type="Node2D" parent="World 2/YSortNode"]
y_sort_enabled = true

[node name="Bats" type="Node2D" parent="World 2/YSortNode"]

[node name="Bat4" parent="World 2/YSortNode/Bats" instance=ExtResource("4_tkaki")]
position = Vector2(54, 391)

[node name="Bat" parent="World 2/YSortNode/Bats" instance=ExtResource("4_tkaki")]
position = Vector2(299, 380)

[node name="InteractionObjects" type="Node2D" parent="World 2/YSortNode"]
position = Vector2(1, -10)

[node name="Artifact2" parent="World 2/YSortNode/InteractionObjects" instance=ExtResource("10_8s6an")]
position = Vector2(-492, 1058)
artifactNumber = 2

[node name="Sprite2D" parent="World 2/YSortNode/InteractionObjects/Artifact2" index="0"]
texture = ExtResource("13_dtddb")

[node name="Artifact3" parent="World 2/YSortNode/InteractionObjects" instance=ExtResource("10_8s6an")]
position = Vector2(-1920, 390)
artifactNumber = 3

[node name="Sprite2D" parent="World 2/YSortNode/InteractionObjects/Artifact3" index="0"]
texture = ExtResource("13_wqeef")

[node name="DashAliens" type="Node2D" parent="World 2/YSortNode"]
y_sort_enabled = true
position = Vector2(1, -10)

[node name="DashAlien2" parent="World 2/YSortNode/DashAliens" instance=ExtResource("10_sw5wt")]
position = Vector2(3062, 553)

[node name="DashAlien3" parent="World 2/YSortNode/DashAliens" instance=ExtResource("10_sw5wt")]
position = Vector2(2749, 404)

[node name="CanvasModulate" type="CanvasModulate" parent="."]
position = Vector2(-34, -48)
color = Color(0.415686, 0.709804, 0.901961, 1)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HelpController" type="Node" parent="CanvasLayer"]
script = ExtResource("19_y5dgo")

[node name="ArtifactController" type="Node" parent="CanvasLayer"]
script = ExtResource("13_8kd3m")

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(2.65746, 1.16143)

[node name="HealthUI" parent="CanvasLayer" instance=ExtResource("2_q2csq")]

[node name="TransitionCooldown" parent="CanvasLayer" instance=ExtResource("12_wxu6c")]
offset_left = 1.0
offset_top = 19.0
offset_right = 230.0
offset_bottom = 48.0

[node name="ArtifactTextBox" parent="CanvasLayer" instance=ExtResource("13_c4d2n")]

[node name="HelpTextBox" parent="CanvasLayer" instance=ExtResource("13_c4d2n")]

[node name="ArtifactUI" parent="CanvasLayer" instance=ExtResource("17_mksqf")]
offset_top = 28.0
offset_bottom = 68.0

[node name="YearLabel" type="Label" parent="CanvasLayer"]
offset_left = 79.0
offset_top = 1.0
offset_right = 119.0
offset_bottom = 29.0
theme_override_fonts/font = ExtResource("20_24mr3")
theme_override_font_sizes/font_size = 13
text = "2028"

[node name="TransitionScreen" type="ColorRect" parent="CanvasLayer"]
offset_right = 320.0
offset_bottom = 179.0
scale = Vector2(1.5, 1.5)
color = Color(0, 0, 0, 0)

[node name="AutoFadeNode" parent="CanvasLayer" instance=ExtResource("16_qauxw")]

[node name="Fader" type="AnimationPlayer" parent="CanvasLayer"]
libraries = {
"": SubResource("AnimationLibrary_jes1i")
}
script = ExtResource("11_svbhb")

[node name="PlayerController" type="Node" parent="."]
script = ExtResource("11_ae5qn")
invincibilityDuration = 1.0

[node name="Music Player" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_0g61i")
autoplay = true

[node name="TransitionSoundEffect" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_gdhli")

[node name="Darkness" type="DirectionalLight2D" parent="."]
color = Color(0, 0, 0, 1)
energy = 0.8
blend_mode = 2

[node name="Editor Light" type="DirectionalLight2D" parent="."]
editor_only = true

[node name="TransitionCooldownTimer" type="Timer" parent="."]
one_shot = true

[connection signal="player_hit" from="World 1/YSortNode/Player" to="PlayerController" method="_on_player_player_hit"]
[connection signal="dash_started" from="World 2/YSortNode/Player" to="PlayerController" method="_on_player_dash_started"]
[connection signal="player_hit" from="World 2/YSortNode/Player" to="PlayerController" method="_on_player_player_hit"]
[connection signal="story_done" from="CanvasLayer/ArtifactTextBox" to="CanvasLayer/ArtifactController" method="_on_artifact_text_box_story_done"]
[connection signal="story_done" from="CanvasLayer/HelpTextBox" to="CanvasLayer/HelpController" method="_on_help_text_box_story_done"]
[connection signal="animation_finished" from="CanvasLayer/Fader" to="." method="_on_fader_animation_finished"]
[connection signal="animation_finished" from="CanvasLayer/Fader" to="CanvasLayer/Fader" method="_on_animation_finished"]
[connection signal="timeout" from="TransitionCooldownTimer" to="." method="_on_transition_cooldown_timer_timeout"]

[editable path="World 1/YSortNode/InteractionObjects/Artifact1"]
[editable path="World 1/YSortNode/InteractionObjects/Artifact1/Hurtbox"]
[editable path="World 1/YSortNode/InteractionObjects/Artifact0"]
[editable path="World 1/YSortNode/InteractionObjects/Artifact0/Hurtbox"]
[editable path="World 2/YSortNode/InteractionObjects/Artifact2"]
[editable path="World 2/YSortNode/InteractionObjects/Artifact2/Hurtbox"]
[editable path="World 2/YSortNode/InteractionObjects/Artifact3"]
[editable path="World 2/YSortNode/InteractionObjects/Artifact3/Hurtbox"]
